--- a/GreekHTML/artemis.html
+++ b/GreekHTML/artemis.html
@@ -1,22 +1,22 @@
-<html lang="en">
+        <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="demeter.css">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <title>Document</title>
+            <link rel="stylesheet" href="apollo.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -53,7 +53,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         </nav>
         <section class="top" id="top">
             <div class="home">
-                <img src="../Full-Design/Demeter.jpg" class="img-fluid">
+                <img src="../Full-Design/Artemis.jpg" class="img-fluid">
             </div>
         </div>
     </section>
@@ -61,10 +61,10 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">ดีมีเทอร์ เทพีแห่งความอุดมสมบูรณ์</div>
-               <div class="row">
+             <div class="topic text-center">อาร์เทมีส เทพีแห่งแสงจันทร์ และสัตว์ป่า</div>
+             <div class="row">
                 <div class="col-sm">
-                    <p>เป็นธิดาองค์ที่2 ของโครนัส และรีอา นางเป็นเทพีแห่งความอุดมสมบูรณ์ และการเก็บเกี่ยว นางมักจะปรากฏตัวพร้อมกับดอกไม้ ผลไม้ และเมล็ดธัญญาหาร ต่อมาได้กลายเป็นชายาของเทพซูส และมีธิดา คือ เพอร์เซโฟนี (Persephone)  เป็นเทวีครองฤดูผลิตผลของพืชทั้งปวง เพื่ออธิบายธรรมชาติของการผลัดฤดู กวีกรีกโบราณจึงผูกเรื่องให้เทวีองค์นี้ถูกฮาเดสลักพาตัวไปเป็นคู่ครองในยมโลก 
+                    <p>เทพีอาร์เทมิส ถือเป็นจันทราเทพีผู้ปกครองช่วงเวลาในตอนกลางคืน และถือเป็นเทพีผู้มอบแสงสว่างให้แก่รัตติกาลอีกด้วย ในขณะเดียวกัน พระเทพีก็ยังมีแนวทางที่แตกต่างจากเทพีองค์อื่นๆ โดยเทพีอาร์เทมิสจะมีลักษณะออกแนวบู๊ๆ รักการล่าสัตว์ พระองค์จะมีอาวุธคู่กายเป็นคันธนูและลูกศรติดตัวเอาไว้อยู่เสมอ 
                     </p>
                 </div>
             </div>
@@ -75,12 +75,11 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
     <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
     <div class="container-fluid">
         <div class="boxtext2">
-            <p><b>ฮาเดสปกครองยมโลกอยู่คนเดียว</b> โดดเดี่ยวไร้คู่ปฏิพัทธ์มาเป็นเวลานานหามีเทวีองค์ใดไยดีที่จะร่วมเทวบัลลังก์กับเขา  เทวีแต่ละองค์ที่เขาทอดเสน่หาต่างองค์ต่างก็ไม่สมัครรักใคร่เขา  ด้วยความไม่ปรารถนาจะลงไปอยู่ในใต้หล้าแดนบาดาลทำให้เขามึนตึงหมางหทัยนัก  ในที่สุดจึงต้องตั้งปณิธานจะไม่ทอดเสน่หาใครอีกเป็นอันขาด  หากปฏิพัทธ์สวาทกับใครก็จะฉุดคร่าพาเอาลงไปบาดาลดื้อ ๆ
+            <p><b>เทพีอาร์เทมิสมีรูปกายงดงาม</b> เป็นที่น่าเคารพ และถือเป็นเทพแห่งแสงจันทร์ แต่ก็ยังพบว่าบางตำนานมีการกล่าวถึงเทพีอาร์เทมิสในอีกรูปแบบ ว่าพระองค์นั้นมีความโหดเหี้ยมอำมหิตไม่เหมือนเทพีองค์อื่นๆ แม้ว่าเมื่อดูภายนอกแล้วเทพีอาร์เทมิสจะเป็นเทพีผู้แข็งแกร่ง เพราะพระองค์ชอบที่จะทำกิจกรรมเยี่ยงบุรุษ เช่น การล่าสัตว์ เป็นต้น 
             </p>
         </div>
         <div class="boxtext5">
-            <p>                  วันหนึ่งเพอร์เซโฟนีพร้อมเพื่อนเล่นทั้งมวลชวนกันลงเที่ยวสวนดอกไม้  บังเอิญฮาเดสขับรถทรงแล่นผ่านมาทางนั้น  ได้ยินสรวลสรรหรรษาร่าเริงระครเสียงขับร้องของเหล่านางอัปสรสาวสวรรค์ลอยมา  เขาจึงหยุดรถทรงลงไปเยี่ยมมองทางช่องสุมทุมพุ่มไม้ ครั้นพบเทวีรุ่นสะคราญทรงโฉม วิลาสลิไลนักทำให้นึกรักจะเอาไปไว้ในยมโลก  เขาจึงก้าวกระชากชิงอุ้มเพอร์เซโฟนีเทวีขึ้นรถไปในทันที
-
+            <p>ซึ่งคิดว่าพระองค์น่าจะเกิดมาจากอุดมคติแห่งสตรีในสมัยกรีกโบราณที่ต้องการจะให้สตรีสามารถทำการใดก็ได้เฉกเช่นดั่งบุรุษ เพราะเทพก็เปรียบเสมือนกระจกเงาที่บอกสะท้อนถึงความเป็นมนุษย์บนโลกใบนี้นั่นเอง 
             </p>
         </div>
     </div>
@@ -89,14 +88,14 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
 <div class="page4">
     <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
     <div class="boxtext3">
-        <img src="../Full-Design/God-png/demeterS.png" class="img-fluid">
+        <img src="../Full-Design/God-png/artemisS.png" class="img-fluid">
     </div>
 
     <div class="boxtext4">
         <p>
-        <b
-        class="bold2">แม่นางดิมีเทอร์</b>โศรกเศร้ามากเกี่ยวกับเรื่องนี้จึงทำให้พืชผลไม่ผลิตงอกงาม นั่นเลยกลายเป็นต้นกำเนิดของฤดูหนาว และมีการเชื่อกันว่านางได้สอนให้ชาวกรีกโบราณรู้จักศิลปะของการปลูกพืชผล เพื่อพวกเขาจะสามารถดำรงชีวิตอยู่ได้ด้วยการเพาะปลูกและมีอารยธรรมขึ้นมา
-    </p>
+            <b
+            class="bold2">พระองค์จึงมักถูกนับถือ</b>ในนามของเทพีผู้คุ้มครองสัตว์ป่าเสียมากกว่า หากมีผู้ใดที่เข้าไปในเขตป่าของพระองค์โดยไม่ได้รับการยินยอม และเข้ามาทำร้ายหรือจับสัตว์ป่าที่อาศัยอยู่ในอาณาเขตของพระองค์แล้ว หากพระเทพีทราบเข้าก็จะทำการสังหารบุคคลผู้นั้นจนตายด้วยลูกธนู
+        </p>
     </div>
 </div>
 <section class="pics" id="pics">
@@ -138,16 +137,16 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no" />
 
 
-                <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
-                    You can download it from https://leaverou.github.com/prefixfree/ -->
-                    <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
+                        <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
+                            You can download it from https://leaverou.github.com/prefixfree/ -->
+                            <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
 
-                </div>
-            </section>
-            <div class="page7">
-                <img src="../Full-Design/downZeus.jpg" class="img-fluid">
-            </div>
+                        </div>
+                    </section>
+                    <div class="page7">
+                        <img src="../Full-Design/downZeus.jpg" class="img-fluid">
+                    </div>
 
-        </body>
+                </body>
 
-        </html>
+                </html>
