--- a/GreekHTML/hera.html
+++ b/GreekHTML/hera.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="demeter.css">
+    <link rel="stylesheet" href="hera.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -53,7 +53,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         </nav>
         <section class="top" id="top">
             <div class="home">
-                <img src="../Full-Design/Demeter.jpg" class="img-fluid">
+                <img src="../Full-Design/Hera.jpg" class="img-fluid">
             </div>
         </div>
     </section>
@@ -61,10 +61,10 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">ดีมีเทอร์ เทพีแห่งความอุดมสมบูรณ์</div>
+               <div class="topic">เฮรา เทพีแห่งหญิงสาวและชีวิตสมรส</div>
                <div class="row">
                 <div class="col-sm">
-                    <p>เป็นธิดาองค์ที่2 ของโครนัส และรีอา นางเป็นเทพีแห่งความอุดมสมบูรณ์ และการเก็บเกี่ยว นางมักจะปรากฏตัวพร้อมกับดอกไม้ ผลไม้ และเมล็ดธัญญาหาร ต่อมาได้กลายเป็นชายาของเทพซูส และมีธิดา คือ เพอร์เซโฟนี (Persephone)  เป็นเทวีครองฤดูผลิตผลของพืชทั้งปวง เพื่ออธิบายธรรมชาติของการผลัดฤดู กวีกรีกโบราณจึงผูกเรื่องให้เทวีองค์นี้ถูกฮาเดสลักพาตัวไปเป็นคู่ครองในยมโลก 
+                    <p>เฮราเป็นบุตรองค์ที่ 3 ของโครนัส และ รีอา พระนางถูกโครนัสกลืนลงท้องไปตั้งแต่เพิ่งถือกำเนิดเนื่องจากคำสาปของไกอาที่ว่าบุตรของโครนัสจะโค่นอำนาจของโครนัสเหมือนกับที่โครนัสได้โค่นอำนาจของยูเรนัส แต่ต่อมาเทพีรีอาได้ซ่อนซูส ผู้เป็นบุตรองค์สุดท้องไว้และได้นำซูสกลับมาเพื่อแก้แค้นโครนัส และนำพี่ๆที่ถูกกลืนเข้าไปอยู่ในท้องของโครนัสออกมา เทพีเฮราจึงปรากฏกายขึ้น เชื่อกันว่าเทพีเฮราถูกเลี้ยงดูมาโดยไททันทีธิส และมหากาพย์อิเลียด      
                     </p>
                 </div>
             </div>
@@ -75,12 +75,11 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
     <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
     <div class="container-fluid">
         <div class="boxtext2">
-            <p><b>ฮาเดสปกครองยมโลกอยู่คนเดียว</b> โดดเดี่ยวไร้คู่ปฏิพัทธ์มาเป็นเวลานานหามีเทวีองค์ใดไยดีที่จะร่วมเทวบัลลังก์กับเขา  เทวีแต่ละองค์ที่เขาทอดเสน่หาต่างองค์ต่างก็ไม่สมัครรักใคร่เขา  ด้วยความไม่ปรารถนาจะลงไปอยู่ในใต้หล้าแดนบาดาลทำให้เขามึนตึงหมางหทัยนัก  ในที่สุดจึงต้องตั้งปณิธานจะไม่ทอดเสน่หาใครอีกเป็นอันขาด  หากปฏิพัทธ์สวาทกับใครก็จะฉุดคร่าพาเอาลงไปบาดาลดื้อ ๆ
+            <p><b>เฮราเป็นมเหสีและเชษฐภคินี</b>(พี่สาว) ของซูส พระนางเป็นเทพีแห่งหญิงสาวและชีวิตสมรส เป็นผู้ปกป้องสตรีที่แต่งงานแล้ว พระนางทรงประทับบนพระบัลลังก์ทองคำเคียงข้างซูสบนภูเขาโอลิมปัส และทรงพยายามอย่างที่สุดที่จะไม่ใส่พระทัยกับเรื่องราวรักๆ ใคร่ๆ ที่ไม่ถูกทำนองคลองธรรมของสวามี 
             </p>
         </div>
         <div class="boxtext5">
-            <p>                  วันหนึ่งเพอร์เซโฟนีพร้อมเพื่อนเล่นทั้งมวลชวนกันลงเที่ยวสวนดอกไม้  บังเอิญฮาเดสขับรถทรงแล่นผ่านมาทางนั้น  ได้ยินสรวลสรรหรรษาร่าเริงระครเสียงขับร้องของเหล่านางอัปสรสาวสวรรค์ลอยมา  เขาจึงหยุดรถทรงลงไปเยี่ยมมองทางช่องสุมทุมพุ่มไม้ ครั้นพบเทวีรุ่นสะคราญทรงโฉม วิลาสลิไลนักทำให้นึกรักจะเอาไปไว้ในยมโลก  เขาจึงก้าวกระชากชิงอุ้มเพอร์เซโฟนีเทวีขึ้นรถไปในทันที
-
+            <p>เฮราได้รับการกล่าวขานว่าเป็นเทพธิดาผู้มีพระกรใสกระจ่างดุจงาช้าง ในตำนานโบราณสัตว์ประจำองค์ของเทพีเฮราคือวัว แต่ในตำนานยุคใหม่นกยูงเป็นสัตว์ศักดิ์สิทธิ์ประจำพระองค์ และจะตามเสด็จอยู่ไม่ห่าง
             </p>
         </div>
     </div>
@@ -89,13 +88,13 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
 <div class="page4">
     <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
     <div class="boxtext3">
-        <img src="../Full-Design/God-png/demeterS.png" class="img-fluid">
+        <img src="../Full-Design/God-png/heraS.png" class="img-fluid">
     </div>
 
     <div class="boxtext4">
         <p>
         <b
-        class="bold2">แม่นางดิมีเทอร์</b>โศรกเศร้ามากเกี่ยวกับเรื่องนี้จึงทำให้พืชผลไม่ผลิตงอกงาม นั่นเลยกลายเป็นต้นกำเนิดของฤดูหนาว และมีการเชื่อกันว่านางได้สอนให้ชาวกรีกโบราณรู้จักศิลปะของการปลูกพืชผล เพื่อพวกเขาจะสามารถดำรงชีวิตอยู่ได้ด้วยการเพาะปลูกและมีอารยธรรมขึ้นมา
+        class="bold2">เทพีเฮราเป็นที่รู้จักกันดีในด้านของอารมณ์ดุร้าย</b>โดยเฉพาะอย่างยิ่งต่อชายาองค์อื่นๆของซูส และบุตรที่เกิดจากชายาเหล่านั้น ไม่ว่าพวกนางจะเป็นเทพีหรือเป็นมนุษย์ก็ตาม ตัวอย่างของผู้ที่ถูกเทพีเฮราปองร้ายมีมากมาย เช่น เทพีลีโต มารดาของเทพอพอลโล่ และ เทพีอาร์ทีมิส เฮอร์คิวลิส ไอโอ ลามิอา เกรานา ซิมิลี มารดาของเทพไดโอนิซัส ยูโรปา เป็นต้น ก็จะเจอจุดจบแบบไม่สวยงาม
     </p>
     </div>
 </div>
