--- a/GreekHTML/hermes.html
+++ b/GreekHTML/hermes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="demeter.css">
+    <link rel="stylesheet" href="hermes.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -53,7 +53,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         </nav>
         <section class="top" id="top">
             <div class="home">
-                <img src="../Full-Design/Demeter.jpg" class="img-fluid">
+                <img src="../Full-Design/Hermes.jpg" class="img-fluid">
             </div>
         </div>
     </section>
@@ -61,10 +61,11 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">ดีมีเทอร์ เทพีแห่งความอุดมสมบูรณ์</div>
+               <div class="topic text-center">เฮอร์มีส เทพแห่งการเปลี่ยนผ่านและเขตแดน</div>
                <div class="row">
                 <div class="col-sm">
-                    <p>เป็นธิดาองค์ที่2 ของโครนัส และรีอา นางเป็นเทพีแห่งความอุดมสมบูรณ์ และการเก็บเกี่ยว นางมักจะปรากฏตัวพร้อมกับดอกไม้ ผลไม้ และเมล็ดธัญญาหาร ต่อมาได้กลายเป็นชายาของเทพซูส และมีธิดา คือ เพอร์เซโฟนี (Persephone)  เป็นเทวีครองฤดูผลิตผลของพืชทั้งปวง เพื่ออธิบายธรรมชาติของการผลัดฤดู กวีกรีกโบราณจึงผูกเรื่องให้เทวีองค์นี้ถูกฮาเดสลักพาตัวไปเป็นคู่ครองในยมโลก 
+                    <p> เฮอร์มีส (Hermes) เป็นบุตรของซุสกับนางเมยา (Maia) พระองค์เป็นเทพที่มีผู้รู้จักมาก คนมักจะนำรูปเทพองค์นี้หรือของวิเศษอย่างหนึ่งของพระองค์ คือ เกือกมีปีก มาแสดงเป็นเครื่องหมายถึงความเร็ว นอกจากเกือก หมวกและไม้ถืออันศักดิ์สิทธิ์ของพระองค์ก็มีปีกที่ทำให้พระองค์ไปได้เร็วยิ่งนัก 
+                หมวกและเกือกมีปีกนั้นเรียกว่า เพตตะซัส (Petasus) และทะเลเรีย (Talaria) เป็นของที่ได้รับประทานจากซุส ซึ่งโปรดให้พระองค์เป็นเทพพนักงานสื่อสารประจำพระองค์ ส่วนไม้ถือศักดิ์สิทธิ์ที่เรียกว่า กะดูเซียส (Caduceus) เดิมเป็นของเทพอะพอลโล  
                     </p>
                 </div>
             </div>
@@ -75,12 +76,13 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
     <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
     <div class="container-fluid">
         <div class="boxtext2">
-            <p><b>ฮาเดสปกครองยมโลกอยู่คนเดียว</b> โดดเดี่ยวไร้คู่ปฏิพัทธ์มาเป็นเวลานานหามีเทวีองค์ใดไยดีที่จะร่วมเทวบัลลังก์กับเขา  เทวีแต่ละองค์ที่เขาทอดเสน่หาต่างองค์ต่างก็ไม่สมัครรักใคร่เขา  ด้วยความไม่ปรารถนาจะลงไปอยู่ในใต้หล้าแดนบาดาลทำให้เขามึนตึงหมางหทัยนัก  ในที่สุดจึงต้องตั้งปณิธานจะไม่ทอดเสน่หาใครอีกเป็นอันขาด  หากปฏิพัทธ์สวาทกับใครก็จะฉุดคร่าพาเอาลงไปบาดาลดื้อ ๆ
+            <p><b>ครั้งหนึ่งเฮอร์มีสขโมยวัวอะพอลโลไป</b>  อะพอลโลรู้ระแคะระคาย จึงมาทวงถาม เฮอร์มีสตอนนั้นยังเยาว์ กลับย้อนถามอย่างหน้าตาเฉยว่า วัวอะไรที่ไหนกันพระองค์ไม่เคยเห็นและไม่เคยได้ยิน อะพอลโลก็ไปฟ้องเทพซุสเพื่อไกล่เกลี่ยให้เฮอร์มีสคืนวัวให้ เมื่ออะพอลโลได้วัวคืนแล้วก็ไม่ถือเทพผู้น้องแม้ว่าวัวจะขาดไป 2 ตัว 
             </p>
         </div>
         <div class="boxtext5">
-            <p>                  วันหนึ่งเพอร์เซโฟนีพร้อมเพื่อนเล่นทั้งมวลชวนกันลงเที่ยวสวนดอกไม้  บังเอิญฮาเดสขับรถทรงแล่นผ่านมาทางนั้น  ได้ยินสรวลสรรหรรษาร่าเริงระครเสียงขับร้องของเหล่านางอัปสรสาวสวรรค์ลอยมา  เขาจึงหยุดรถทรงลงไปเยี่ยมมองทางช่องสุมทุมพุ่มไม้ ครั้นพบเทวีรุ่นสะคราญทรงโฉม วิลาสลิไลนักทำให้นึกรักจะเอาไปไว้ในยมโลก  เขาจึงก้าวกระชากชิงอุ้มเพอร์เซโฟนีเทวีขึ้นรถไปในทันที
-
+            <p>
+                อะพอลโลเห็นเฮอร์มีสมีพิณถือคันหนึ่งเรียกว่า ไลร์ (lyre)ก็อยากได้ จึงเอาไม้กะดูเซียสแลก ไม้ถือกะดูเซียสจึงเป็นของเฮอร์มีส ไม้กะดูเซียสนี้แต่เดิมเป็นไม้ถือมีปีก ต่อมาเฮอร์มีสไปพบงู 2 ตัวกำลังต่อสู้กันพระองค์เอาไม้ทิ่มเข้าในระหว่างกลางเพื่อห้าม งูก็เลื้อยขึ้นมาพันอยู่กับไม้โดยหันหัวเข้าหากัน ตั้งแต่นั้นมางูก็พันอยู่กับไม้ถือกะดูเซียสตลอด และกลายเป็นสัญลักษณ์ของความเป็นกลาง
+                
             </p>
         </div>
     </div>
@@ -89,13 +91,13 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
 <div class="page4">
     <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
     <div class="boxtext3">
-        <img src="../Full-Design/God-png/demeterS.png" class="img-fluid">
+        <img src="../Full-Design/God-png/hermesS.png" class="img-fluid">
     </div>
 
     <div class="boxtext4">
         <p>
         <b
-        class="bold2">แม่นางดิมีเทอร์</b>โศรกเศร้ามากเกี่ยวกับเรื่องนี้จึงทำให้พืชผลไม่ผลิตงอกงาม นั่นเลยกลายเป็นต้นกำเนิดของฤดูหนาว และมีการเชื่อกันว่านางได้สอนให้ชาวกรีกโบราณรู้จักศิลปะของการปลูกพืชผล เพื่อพวกเขาจะสามารถดำรงชีวิตอยู่ได้ด้วยการเพาะปลูกและมีอารยธรรมขึ้นมา
+        class="bold2">สิ่งที่น่าแปลกอีกประการหนึ่งคือ</b> แม้ว่าพระองค์จะเป็นโอรสของซุสกับเมยา (Maia) แต่ทรงเป็นโอรสองค์เดียวของซุสที่เทพีเฮราไม่เกลียดชัง กลับเรียกหาให้อยู่ใกล้ๆ ทั้งนี้อาจเป็นเพราะบุคลิกและนิสัยของเทพเฮอร์มีสที่ชอบช่วยเหลือทุกคน 
     </p>
     </div>
 </div>
@@ -150,4 +152,4 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
 
         </body>
 
-        </html>
+        </html> 
