--- a/GreekHTML/athena.html
+++ b/GreekHTML/athena.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="demeter.css">
+    <link rel="stylesheet" href="hermes.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -53,7 +53,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         </nav>
         <section class="top" id="top">
             <div class="home">
-                <img src="../Full-Design/Demeter.jpg" class="img-fluid">
+                <img src="../Full-Design/Athena.jpg" class="img-fluid">
             </div>
         </div>
     </section>
@@ -61,10 +61,10 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">ดีมีเทอร์ เทพีแห่งความอุดมสมบูรณ์</div>
+               <div class="topic">อธีน่า เทพีแห่งปัญญา</div>
                <div class="row">
                 <div class="col-sm">
-                    <p>เป็นธิดาองค์ที่2 ของโครนัส และรีอา นางเป็นเทพีแห่งความอุดมสมบูรณ์ และการเก็บเกี่ยว นางมักจะปรากฏตัวพร้อมกับดอกไม้ ผลไม้ และเมล็ดธัญญาหาร ต่อมาได้กลายเป็นชายาของเทพซูส และมีธิดา คือ เพอร์เซโฟนี (Persephone)  เป็นเทวีครองฤดูผลิตผลของพืชทั้งปวง เพื่ออธิบายธรรมชาติของการผลัดฤดู กวีกรีกโบราณจึงผูกเรื่องให้เทวีองค์นี้ถูกฮาเดสลักพาตัวไปเป็นคู่ครองในยมโลก 
+                    <p> เทพีอธีนา 1 ใน 12 เทพแห่งโอลิมปัส เป็นเทพีแห่งปัญญา เนื่องจากเกิดมาจากส่วนหัวของ ซุส ประมุขแห่งเหล่าทวยเทพ ในขณะที่กำลังประชุมเหล่าเทพที่เทือกเขาโอลิมปัส เมื่อจู่ ๆ ซูสเกิดปวดศีรษะอย่างรุนแรง จึงได้ให้เฮเฟสตัส เทพแห่งการตีเหล็กใช้ขวานผ่าศีรษะออก ปรากฏเป็นอธีนาที่สวมชุดเกราะพร้อมหอกกระโดดออกมา   
                     </p>
                 </div>
             </div>
@@ -75,12 +75,11 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
     <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
     <div class="container-fluid">
         <div class="boxtext2">
-            <p><b>ฮาเดสปกครองยมโลกอยู่คนเดียว</b> โดดเดี่ยวไร้คู่ปฏิพัทธ์มาเป็นเวลานานหามีเทวีองค์ใดไยดีที่จะร่วมเทวบัลลังก์กับเขา  เทวีแต่ละองค์ที่เขาทอดเสน่หาต่างองค์ต่างก็ไม่สมัครรักใคร่เขา  ด้วยความไม่ปรารถนาจะลงไปอยู่ในใต้หล้าแดนบาดาลทำให้เขามึนตึงหมางหทัยนัก  ในที่สุดจึงต้องตั้งปณิธานจะไม่ทอดเสน่หาใครอีกเป็นอันขาด  หากปฏิพัทธ์สวาทกับใครก็จะฉุดคร่าพาเอาลงไปบาดาลดื้อ ๆ
-            </p>
+            <p><b>เทพีอธีนาเป็นธิดาของเทพีเมทิส</b> ซึ่งถูกซูสกลืนเข้าไปในท้องตั้งแต่ยังมีครรภ์แก่ เนื่องจากคำทำนายที่ว่าบุตรที่เกิดจากนางจะเป็นผู้โค่นบัลลังก์ของซูส แต่แม้ว่าอธีนาจะถือกำเนิดมาพร้อมกับคำทำนายนั้น พระนางก็เป็นหนึ่งในลูกรักของซูส ว่ากันว่าฮีราอิจฉาอธีนาที่ถือตัวว่าเป็นผู้กำเนิดมาจากซูสโดยตรง  
         </div>
         <div class="boxtext5">
-            <p>                  วันหนึ่งเพอร์เซโฟนีพร้อมเพื่อนเล่นทั้งมวลชวนกันลงเที่ยวสวนดอกไม้  บังเอิญฮาเดสขับรถทรงแล่นผ่านมาทางนั้น  ได้ยินสรวลสรรหรรษาร่าเริงระครเสียงขับร้องของเหล่านางอัปสรสาวสวรรค์ลอยมา  เขาจึงหยุดรถทรงลงไปเยี่ยมมองทางช่องสุมทุมพุ่มไม้ ครั้นพบเทวีรุ่นสะคราญทรงโฉม วิลาสลิไลนักทำให้นึกรักจะเอาไปไว้ในยมโลก  เขาจึงก้าวกระชากชิงอุ้มเพอร์เซโฟนีเทวีขึ้นรถไปในทันที
-
+            <p>นอกจากอธีนาจะเป็นเทพีแห่งปัญญาแล้ว ยังเชื่อกันว่าพระนางเป็นเทพีแห่งสงครามด้วย เนื่องจากเทวรูปของพระนางมักปรากฏเป็นรูปผู้หญิงสวมชุดเกราะ ถือโล่ห์และหอกที่มือซ้าย และถือไนกี เทพีแห่งชัยชนะที่มือขวา โดยที่ชื่อกรุงเอเธนส์ เมืองหลวงของกรีซ ก็มีที่มาจากพระนามของนาง ชื่อเต็มของอธีนาคือ พัลลัสอธีนา (Pallas Athena)
+                
             </p>
         </div>
     </div>
@@ -89,14 +88,13 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
 <div class="page4">
     <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
     <div class="boxtext3">
-        <img src="../Full-Design/God-png/demeterS.png" class="img-fluid">
+        <img src="../Full-Design/God-png/Athena.png" class="img-fluid">
     </div>
 
     <div class="boxtext4">
         <p>
         <b
-        class="bold2">แม่นางดิมีเทอร์</b>โศรกเศร้ามากเกี่ยวกับเรื่องนี้จึงทำให้พืชผลไม่ผลิตงอกงาม นั่นเลยกลายเป็นต้นกำเนิดของฤดูหนาว และมีการเชื่อกันว่านางได้สอนให้ชาวกรีกโบราณรู้จักศิลปะของการปลูกพืชผล เพื่อพวกเขาจะสามารถดำรงชีวิตอยู่ได้ด้วยการเพาะปลูกและมีอารยธรรมขึ้นมา
-    </p>
+        class="bold2">อาจกล่าวได้ว่า</b> อธีนา เป็นเทพที่ชาวกรีกให้ความนับถือมากที่สุดก็ว่าได้ ในสมัยโบราณมีการสร้างมหาวิหารเพื่อถวายแด่พระนาง คือ วิหารพาเธนอนซึ่งตั้งอยู่ที่เนินอะโครโปลิส ที่กรุงเอเธนส์ในปัจจุบัน ในการท่องเที่ยวของกรีซ จะพบรูปปั้นขนาดเล็กของอธีนาขายเป็นที่ระลึกอยู่ทั่วไป    </p>
     </div>
 </div>
 <section class="pics" id="pics">
@@ -150,4 +148,4 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
 
         </body>
 
-        </html>
+        </html> 
