edit img src god-of-greek

--- a/GreekHTML/zeus.html
+++ b/GreekHTML/zeus.html
@@ -133,36 +133,36 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         <div class="slider">
             <input type="radio" name="slide_switch" id="id1" />
             <label for="id1">
-                <img src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no"
+                <img src="https://i.imgur.com/Z65ratF.jpg"
                 width="100" />
             </label>
             <img
-            src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no" />
+            src="https://i.imgur.com/Z65ratF.jpg" />
 
             <!--Lets show the second image by default on page load-->
             <input type="radio" name="slide_switch" id="id2" checked="checked" />
             <label for="id2">
-                <img src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no"
+                <img src="https://i.imgur.com/hTjNO2H.jpg"
                 width="100" />
             </label>
             <img
-            src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no" />
+            src="https://i.imgur.com/hTjNO2H.jpg" />
 
             <input type="radio" name="slide_switch" id="id3" />
             <label for="id3">
-                <img src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no"
+                <img src="https://i.imgur.com/HJlxTpz.jpg"
                 width="100" />
             </label>
             <img
-            src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no" />
+            src="https://i.imgur.com/HJlxTpz.jpg" />
 
             <input type="radio" name="slide_switch" id="id4" />
             <label for="id4">
-                <img src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no"
+                <img src="https://i.imgur.com/6QOZ64u.jpg"
                 width="100" />
             </label>
             <img
-            src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no" />
+            src="https://i.imgur.com/6QOZ64u.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
