--- a/GreekHTML/poseidon.html
+++ b/GreekHTML/poseidon.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="poseidon.css">
+    <link rel="stylesheet" href="zeus.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -80,6 +80,7 @@
             <div class="boxtext5">
                 <p> โพเซดอนมีมเหสีองค์หนึ่งคือแอมฟิไทรท์ ซึ่งเป็น นีริอิด หรือบุตรสาวของ นีริอัส และ ดอริส  โพไซดอนเห็นนางตอนกำลังเต้นรำร่วมกับเหล่านีริอิดอื่นๆ จึงได้ทำการลักพาตัวนางไปเป็นชายาในดินแดนใต้สมุทร
                 และชายาอีกองค์หนึ่งของโพไซดอนเป็นหญิงรับใช้ของอะธีนา คือ เมดูซ่า เพราะหลงใหลในความงามของเมดูซ่า แต่เมื่ออะธีนาทราบเรื่องจึงสาบเมดูซ่าให้เป็นปีศาจที่มีผมเป็นงู และเมื่อมองใครก็จะกลายเป็นหินไปหมด เมื่อเปอร์ซิอุสได้ทำการตัดศีรษะของเมดูซ่าแล้ว เลือดของเมดูซ่าที่กระเซ็นออกมา กลายเป็นม้าบินสองตัว คือ เพกาซัส (Pegasus) และ คริสซาออร์ (Chrysaor) 
+
                 </p>
             </div>
         </div>
@@ -88,7 +89,7 @@
     <div class="page4">
         <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
         <div class="boxtext3">
-            <img src="../Full-Design/God-png/poseidonS.png" class="img-fluid">
+            <img src="../Full-Design/God-png/zeusS.png" class="img-fluid">
         </div>
 
         <div class="boxtext4">
@@ -107,36 +108,36 @@
             <div class="slider">
                 <input type="radio" name="slide_switch" id="id1" />
                 <label for="id1">
-                    <img src="https://i.imgur.com/nUHCKFs.jpg"
+                    <img src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no"
                         width="100" />
                 </label>
                 <img
-                    src="https://i.imgur.com/nUHCKFs.jpg" />
+                    src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no" />
 
                 <!--Lets show the second image by default on page load-->
                 <input type="radio" name="slide_switch" id="id2" checked="checked" />
                 <label for="id2">
-                    <img src="https://i.imgur.com/Igh3ggQ.jpg"
+                    <img src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no"
                         width="100" />
                 </label>
                 <img
-                    src="https://i.imgur.com/Igh3ggQ.jpg" />
+                    src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no" />
 
                 <input type="radio" name="slide_switch" id="id3" />
                 <label for="id3">
-                    <img src="https://i.imgur.com/CWWkaxW.jpg"
+                    <img src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no"
                         width="100" />
                 </label>
                 <img
-                    src="https://i.imgur.com/CWWkaxW.jpg" />
+                    src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no" />
 
                 <input type="radio" name="slide_switch" id="id4" />
                 <label for="id4">
-                    <img src="https://i.imgur.com/243DXIy.jpg"
+                    <img src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no"
                         width="100" />
                 </label>
                 <img
-                    src="https://i.imgur.com/243DXIy.jpg" />
+                    src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
