--- a/GreekHTML/zeus.html
+++ b/GreekHTML/zeus.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="zeus.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+    <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
 </head>
 
 
@@ -53,18 +53,18 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         </nav>
         <section class="top" id="top">
             <div class="home">
-                <img src="../Full-Design/Zeus.jpg" class="img-fluid">
+                <img src="../Full-Design/Poseidon.jpg" class="img-fluid">
             </div>
-        </div>
+    </div>
     </section>
     <section class="history" id="history">
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">ซีอุส ประมุขแห่งทวยเทพโอลิมปัส</div>
-               <div class="row">
-                <div class="col-sm">
-                    <p>เทพซูส เป็นราชาแห่งทวยเทพ
+                     <div class="topic">ซีอุส ประมุขแห่งทวยเทพโอลิมปัส</div>
+                <div class="row">
+                    <div class="col-sm">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; เทพซูส เป็นราชาแห่งทวยเทพ
                         ผู้ปกครองเขา โอลิมปัส (Olympus) และเทพแห่งท้องฟ้าและฟ้าร้องของ ตำนานเทพปกรณัมกรีก
                         สัญลักษณ์ประจำพระองค์คือสายฟ้า โคเพศผู้ นกอินทรี และต้นโอ๊ก
                         นามของซีอุสแปลว่าความสว่างของท้องฟ้า นามของพระองค์ในตำนานเทพปกรณัมโรมันคือ เทพจูปิเตอร์
@@ -77,104 +77,103 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
                         ที่กำเนิดจากเทพีไดโอเน่อีกด้วย
                         เทพซูสมักมีชื่อเสียงในพฤติกรรมนอกลู่นอกทางเรื่องชู้สาวของพระองค์
                         ซึ่งยังรวมไปถึงความสัมพันธ์กับเด็กหนุ่มนาม แกนีมีด (Ganymede)ด้วยเช่นกัน
-                    </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<div class="page3">
-    <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
-    <div class="container-fluid">
-        <div class="boxtext2">
-            <p><b>พฤติกรรมของพระองค์</b>ทำให้เกิดผู้สืบเชื้อสายอยู่หลายองค์และหลายคนด้วยกัน
-                อาทิเช่น เทพีอาธีน่า (Athena),
-                เทพอพอลโล (Apollo), เทพีอาร์ทีมีส (Artemis), เทพเฮอร์มีส (Hermes), เทพีเพอร์ซิโฟเน่
-                (Persephone), เทพไดโอไนซัส(Dionysus), วีรบุรุษเพอร์ซิอุส (Perseus), วีรบุรุษเฮอร์คิวลีส
-                (Hercules), เฮเลนแห่งทรอย (Helen), กษัตริย์ไมนอส (Minos) และเหล่า เทพีมิวเซส (Muses)
-                ส่วนผู้สืบเชื้อสายที่เกิดจากเทพีเฮร่าโดยตรงได้แก่ เทพเอรีส (Ares), เทพีเฮบี (Hebe), เทพ
-                เอฟเฟสตตุส (Hephaestus), เทพีเอริส (Eris) และ เทพีไอไลธีเอีย (Eileithyia)
-            </p>
+    </section>
+    <div class="page3">
+        <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
+        <div class="container-fluid">
+            <div class="boxtext2">
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>พฤติกรรมของพระองค์</b>ทำให้เกิดผู้สืบเชื้อสายอยู่หลายองค์และหลายคนด้วยกัน
+                    อาทิเช่น เทพีอาธีน่า (Athena),
+                    เทพอพอลโล (Apollo), เทพีอาร์ทีมีส (Artemis), เทพเฮอร์มีส (Hermes), เทพีเพอร์ซิโฟเน่
+                    (Persephone), เทพไดโอไนซัส(Dionysus), วีรบุรุษเพอร์ซิอุส (Perseus), วีรบุรุษเฮอร์คิวลีส
+                    (Hercules), เฮเลนแห่งทรอย (Helen), กษัตริย์ไมนอส (Minos) และเหล่า เทพีมิวเซส (Muses)
+                    ส่วนผู้สืบเชื้อสายที่เกิดจากเทพีเฮร่าโดยตรงได้แก่ เทพเอรีส (Ares), เทพีเฮบี (Hebe), เทพ
+                    เอฟเฟสตตุส (Hephaestus), เทพีเอริส (Eris) และ เทพีไอไลธีเอีย (Eileithyia)
+                </p>
+            </div>
+            <div class="boxtext5">
+                <p> เทพีไกอาแค้นเทพยูเรนัสมากจึงยุยงให้เหล่าเทพไททันก่อกบฏ
+                    ไม่มีเทพองค์ใดที่กล้าชิงบัลลังก์พระบิดายกเว้นเทพโครนัส
+                    และจากการช่วยเหลือจากเทพีไกอาทำให้เทพโครนัสชิงอำนาจได้สำเร็จ
+                    ทว่าเทพโครนัสไม่ได้ทำตามสัญญาที่จะปลดปล่อยอสูรผู้เป็นน้อง
+                    เทพีไกอาจึงสาปแช่งว่าบุตรที่จะเกิดมาของโครนัสจะชิงอำนาจไปเหมือนกับที่บิดาเคยทำเทพโครนัสตระหนักมากเพราะหลังจากนั้นไม่นาน
+                    เทพีรีอา พระชายาก็ตั้งครรภ์ เมื่อได้ข่าวการประสูติ
+
+                </p>
+            </div>
         </div>
-        <div class="boxtext5">
-            <p> เทพีไกอาแค้นเทพยูเรนัสมากจึงยุยงให้เหล่าเทพไททันก่อกบฏ
-                ไม่มีเทพองค์ใดที่กล้าชิงบัลลังก์พระบิดายกเว้นเทพโครนัส
-                และจากการช่วยเหลือจากเทพีไกอาทำให้เทพโครนัสชิงอำนาจได้สำเร็จ
-                ทว่าเทพโครนัสไม่ได้ทำตามสัญญาที่จะปลดปล่อยอสูรผู้เป็นน้อง
-                เทพีไกอาจึงสาปแช่งว่าบุตรที่จะเกิดมาของโครนัสจะชิงอำนาจไปเหมือนกับที่บิดาเคยทำเทพโครนัสตระหนักมากเพราะหลังจากนั้นไม่นาน
-                เทพีรีอา พระชายาก็ตั้งครรภ์ เมื่อได้ข่าวการประสูติ
+    </div>
 
-            </p>
+    <div class="page4">
+        <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
+        <div class="boxtext3">
+            <img src="../Full-Design/God-png/zeusS.png" class="img-fluid">
+        </div>
+
+        <div class="boxtext4">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <b
+                class="bold2">เทพโครนัสจึงบุกเข้าไปใน</b>ตำหนักพระชายาและจับทารกผู้เป็นสายเลือดของตนกลืนลงท้องไป
+            และครรภ์ต่อๆมาของเทพีรีอาก็เช่นกัน ส่งผลให้เทพีรีอาเศร้าเสียใจอย่างมากโครนัสให้กำเนิดบุตรและธิดารวมหกองค์
+            คือ เฮสเทีย เฮดีส ดีมิเตอร์ โพไซดอน เฮรา ซูส
+            ซึ่งพอกำเนิดมาได้ถูกโครนัสจับกลืนลงท้องไปแต่เนื่องด้วยซูสหนีออกมาได้ จึงรอให้ตัวเองโตแล้วกลับมาช่วยอีก 6
+            องค์ในภายหลัง เนื่องจาก เฮสเทีย เฮดีส ดีมิเตอร์ โพไซดอน และเฮรา เป็นเทพจึงไม่ตายตอนอยู่ในท้องของโครนัส
+
         </div>
     </div>
-</div>
+    <section class="pics" id="pics">
+        <div class="page6">
+            <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
 
-<div class="page4">
-    <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
-    <div class="boxtext3">
-        <img src="../Full-Design/God-png/zeusS.png" class="img-fluid">
-    </div>
+            <div class="slider">
+                <input type="radio" name="slide_switch" id="id1" />
+                <label for="id1">
+                    <img src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no"
+                        width="100" />
+                </label>
+                <img
+                    src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no" />
 
-    <div class="boxtext4">
-        <p>
-        <b
-        class="bold2">เทพโครนัสจึงบุกเข้าไปใน</b>ตำหนักพระชายาและจับทารกผู้เป็นสายเลือดของตนกลืนลงท้องไป
-        และครรภ์ต่อๆมาของเทพีรีอาก็เช่นกัน ส่งผลให้เทพีรีอาเศร้าเสียใจอย่างมากโครนัสให้กำเนิดบุตรและธิดารวมหกองค์
-        คือ เฮสเทีย เฮดีส ดีมิเตอร์ โพไซดอน เฮรา ซูส
-        ซึ่งพอกำเนิดมาได้ถูกโครนัสจับกลืนลงท้องไปแต่เนื่องด้วยซูสหนีออกมาได้ จึงรอให้ตัวเองโตแล้วกลับมาช่วยอีก 6
-        องค์ในภายหลัง เนื่องจาก เฮสเทีย เฮดีส ดีมิเตอร์ โพไซดอน และเฮรา เป็นเทพจึงไม่ตายตอนอยู่ในท้องของโครนัส
-    </p>
-    </div>
-</div>
-<section class="pics" id="pics">
-    <div class="page6">
-        <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
+                <!--Lets show the second image by default on page load-->
+                <input type="radio" name="slide_switch" id="id2" checked="checked" />
+                <label for="id2">
+                    <img src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no"
+                        width="100" />
+                </label>
+                <img
+                    src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no" />
 
-        <div class="slider">
-            <input type="radio" name="slide_switch" id="id1" />
-            <label for="id1">
-                <img src="https://i.imgur.com/Z65ratF.jpg"
-                width="100" />
-            </label>
-            <img
-            src="https://i.imgur.com/Z65ratF.jpg" />
+                <input type="radio" name="slide_switch" id="id3" />
+                <label for="id3">
+                    <img src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no"
+                        width="100" />
+                </label>
+                <img
+                    src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no" />
 
-            <!--Lets show the second image by default on page load-->
-            <input type="radio" name="slide_switch" id="id2" checked="checked" />
-            <label for="id2">
-                <img src="https://i.imgur.com/hTjNO2H.jpg"
-                width="100" />
-            </label>
-            <img
-            src="https://i.imgur.com/hTjNO2H.jpg" />
-
-            <input type="radio" name="slide_switch" id="id3" />
-            <label for="id3">
-                <img src="https://i.imgur.com/HJlxTpz.jpg"
-                width="100" />
-            </label>
-            <img
-            src="https://i.imgur.com/HJlxTpz.jpg" />
-
-            <input type="radio" name="slide_switch" id="id4" />
-            <label for="id4">
-                <img src="https://i.imgur.com/6QOZ64u.jpg"
-                width="100" />
-            </label>
-            <img
-            src="https://i.imgur.com/6QOZ64u.jpg" />
+                <input type="radio" name="slide_switch" id="id4" />
+                <label for="id4">
+                    <img src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no"
+                        width="100" />
+                </label>
+                <img
+                    src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
                     You can download it from https://leaverou.github.com/prefixfree/ -->
-                    <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
+                <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
 
-                </div>
-            </section>
-            <div class="page7">
-                <img src="../Full-Design/downZeus.jpg" class="img-fluid">
             </div>
+    </section>
+    <div class="page7">
+        <img src="../Full-Design/downZeus.jpg" class="img-fluid">
+    </div>
 
-        </body>
+</body>
 
-        </html>
+</html>
